packages/fortifier-macros/tests/validations/email/unknown_fail.stderr
error: unknown parameter
 --> tests/validations/email/unknown_fail.rs:5:22
  |
5 |     #[validate(email(unknown = true))]
  |                      ^^^^^^^
